added hospial desc and made this breeding details user details also
